working city search and scraper

--- a/starter.ipynb
+++ b/starter.ipynb
@@ -195,15 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  InsecureRequestWarning)\n",
       "/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
       "  InsecureRequestWarning)\n"
      ]
@@ -212,9 +210,36 @@
    "source": [
     "#first page for business info\n",
     "\n",
-    "url = 'https://www.yelp.com/biz/shangri-la-austin-2?start=0&sort_by=date_desc'\n",
+    "url = 'https://www.yelp.com/biz/moonshine-patio-bar-and-grill-austin?osq=Restaurants'\n",
     "response = requests.get(url, headers=headers, verify=False).text\n",
     "page = BeautifulSoup(response, \"lxml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Moonshine Patio Bar & Grill'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name"
    ]
   },
   {
