--- a/listing_scrape.ipynb
+++ b/listing_scrape.ipynb
@@ -2,15 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
     "import scrape\n",
-    "from bs4 import BeautifulSoup\n",
-    "import time\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links = scrape.get_city('Bars', 'Austin', 'TX', page_limit=1)"
    ]
   },
   {
@@ -19,22 +25,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  InsecureRequestWarning)\n",
-      "/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  InsecureRequestWarning)\n",
-      "/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  InsecureRequestWarning)\n",
-      "/anaconda3/lib/python3.6/site-packages/urllib3/connectionpool.py:858: InsecureRequestWarning: Unverified HTTPS request is being made. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#ssl-warnings\n",
-      "  InsecureRequestWarning)\n"
+      "Loading Reviews: [=================================================================================================================]\n"
      ]
     }
    ],
    "source": [
-    "links = scrape.get_city_search(search='Bars', city='Austin', state='TX', page_limit=4)"
+    "business = scrape.get_business(links['links'][1],6, show_loader=True)"
    ]
   },
   {
