--- a/listing_scrape.ipynb
+++ b/listing_scrape.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "import scrape\n",
     "import json\n",
-    "import pandas as pd\n",
-    "import re\n",
-    "from sklearn import model_selection"
+    "import pandas as pd"
    ]
   },
   {
